c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/duplicate_label_in_default.c
/* Make sure our validation of goto/label also traverses default statements */

int main(void) {
        int a = 1;
label:

    switch (a) {
        case 1:
            return 0;
        default:
        label:
            return 1;
    }
    return 0;
}